[package]
name = "opensub"
version = "0.1.0"
authors = ["Ranadeep Biswas <ranadip.bswas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json", "blocking" ] }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "0.2.13", features = ["full"] }
url = "2.1.1"
